[project]
name = "sd-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "gradio>=6.16.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
]
